--- a/style.css
+++ b/style.css
@@ -7,4 +7,14 @@
 body{
     background-color: black;
     color: white;
+    display: grid;
+    justify-content: center;
+}
+
+h1{
+    font-size: 2rem;
+}
+
+p{
+    font-size: 1.5rem;
 }
