--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 :root {
     /*color-scheme: light dark;*/
-    --color: light-dark(black, white);
-    --background-color: light-dark(white, black);
+    --color: light-dark(white, white);
+    --background-color: light-dark(rgb(31, 31, 31), rgb(31, 31, 31));
     --border: light-dark(black, white);
     --accent: light-dark(rgb(255, 204, 0), rgb(255, 204, 0)); 
 }
@@ -126,6 +126,19 @@ ul {
     margin-left: 2dvi;
 }li {
     font-size: 1.1rem;
+}
+
+
+h2 {
+    color: rgb(255, 204, 0);
+    text-decoration: underline;
+}
+h3 {
+    color: rgb(255, 204, 0);
+}
+
+.source-link {
+    color: rgb(119, 119, 244);
 }
 
 
