--- a/style.css
+++ b/style.css
@@ -22,6 +22,32 @@ body {
     grid-template-rows: min-content min-content;
 }
 
+img {
+    border-radius: 10px;
+    width: 55%;
+}
+
+.material-symbols-rounded {
+    color: rgb(255, 204, 0);
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+    font-size: 2.5rem;
+}
+
+header {
+    margin: 0 0 50px;
+    display: grid;
+    grid-template-columns: max-content min-content;
+    grid-gap: 20px;
+    align-items: center;
+}header h2 {
+    font-size: 1.75rem;
+    font-weight: 700;
+}
+
 
 nav {
     display: grid;
@@ -82,6 +108,7 @@ summary {
 
 main {
     margin: 20px 30px;
+    width: 70%;
 }
 section {
     margin: 0 0 50px;
@@ -150,4 +177,17 @@ span {
     nav::-webkit-scrollbar {
         width: 0;
     } 
+    main {
+        width: 90%;
+    }
+
+    img {
+        width: 75%;
+    }
+}
+
+@media (max-width: 900px) {
+    img {
+        width: 95%;
+    }
 }
